update: return json data for every PUT request
